--- a/CodeLinkR/inst/classifications.yaml
+++ b/CodeLinkR/inst/classifications.yaml
@@ -1,5 +1,6 @@
 classifications:
   - name: CN
+    type: Product
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/documents/cn_2015/CNSE_2015_DE_EN_FR.zip
       dataFile: CN_2015_SELF-EXPL_DE_EN_FR.xls
@@ -10,6 +11,7 @@ classifications:
       version: '2016'
       colnames: 'Sorting_Key,CN_Code,EN,DE,FR,Update'
   - name: CPA
+    type: Product
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/nomenclatures/index.cfm?TargetUrl=ACT_OTH_CLS_DLD&StrNom=CPA_2_1&StrFormat=CSV&StrLanguageCode=EN&IntKey=&IntLevel=&bExport=
       dataFile: CPA_2_1.csv
@@ -20,46 +22,49 @@ classifications:
       version: '2008'
       colnames: 'Order,Level,Code,Parent,Description,Rulings,This_item_includes,This_item_also_includes,This_item_excludes'
   - name: CPC
+    type: Product
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/nomenclatures/index.cfm?TargetUrl=ACT_OTH_CLS_DLD&StrNom=CPC_2_1&StrFormat=CSV&StrLanguageCode=EN&IntKey=&IntLevel=&bExport=
       dataFile: CPC_2_1.csv
       version: '2.1'
       colnames: 'Order,Level,Code,Parent,Description'
-  - name: NHM
+  - name: HS
+    type: Product
     versions:
-    - url: http://ec.europa.eu/eurostat/ramon/other_documents/nhm/NHM_2015_25-3-2015.zip
-      dataFile: NHM_EN_v1_1.xlsx
-      version: '2015'
-      colnames: 'Code,Description,Reference,Reference_text'
+    - url: http://ec.europa.eu/eurostat/ramon/documents/hs_2012/HS_2012.zip
+      dataFile: 'HS 2012 - SELF-EXPLANATORY TEXTS DE EN FR.xls'
+      version: '2012'
+      colnames: 'CNKEY,HS_CODE,SE_DESC_EN,SE_DESC_DE,SE_DESC_FR'
   - name: ISIC
+    type: Industry
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/nomenclatures/index.cfm?TargetUrl=ACT_OTH_CLS_DLD&StrNom=ISIC_4&StrFormat=CSV&StrLanguageCode=EN&IntKey=&IntLevel=&bExport=
       dataFile: ISIC4.csv
       version: '4'
       colnames: 'Order,Level,Code,Parent,Description'
   - name: NACE
+    type: Industry
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/nomenclatures/index.cfm?TargetUrl=ACT_OTH_CLS_DLD&StrNom=NACE_REV2&StrFormat=CSV&StrLanguageCode=EN&IntKey=&IntLevel=&bExport=
       dataFile: NACE_REV2.csv
       version: '2'
       colnames: 'Order,Level,Code,Parent,Description,Reference_to_ISIC_Rev_4,This_item_includes,This_item_also_includes,Rulings,This_item_excludes'
   - name: NAICS
+    type: Industry
     versions:
     - url: http://www.census.gov/eos/www/naics/2012NAICS/2-digit_2012_Codes.xls
       dataFile: 2-digit_2012_Codes.xls
       version: '2012'
       colnames: 'Sequence_Number,Code,Title'
-  - name: SITC
+  - name: NHM
+    type: Product
     versions:
-    - url: http://unstats.un.org/unsd/cr/downloads/SITC4_english.zip
-      dataFile: SITC4_english_structure.txt
-      version: '4'
-      colnames: 'Code,Description'
-    - url: http://unstats.un.org/unsd/cr/downloads/SITC_Rev_3_english.zip
-      dataFile: SITC_Rev_3_english_structure.txt
-      version: '3'
-      colnames: 'Code,Description'
+    - url: http://ec.europa.eu/eurostat/ramon/other_documents/nhm/NHM_2015_25-3-2015.zip
+      dataFile: NHM_EN_v1_1.xlsx
+      version: '2015'
+      colnames: 'Code,Description,Reference,Reference_text'
   - name: PRODCOM
+    type: Product
     versions:
     - url: http://ec.europa.eu/eurostat/ramon/documents/prodcom_2015/PRODCOM_List_2015.zip
       dataFile: PRODCOM_List_2015.xls
@@ -69,9 +74,14 @@ classifications:
       dataFile: BG_CS_DA_DE_EL_EN_ES_ET.xls
       version: '2014'
       colnames: 'ID,CODE,LEVEL,HS_CN,UNIT,PRODTYPE,NACE,CPA,bg,cs,da,de,el,en,es,et'
-  - name: HS
+  - name: SITC
+    type: Product
     versions:
-    - url: http://ec.europa.eu/eurostat/ramon/documents/hs_2012/HS_2012.zip
-      dataFile: 'HS 2012 - SELF-EXPLANATORY TEXTS DE EN FR.xls'
-      version: '2012'
-      colnames: 'CNKEY,HS_CODE,SE_DESC_EN,SE_DESC_DE,SE_DESC_FR'
+    - url: http://unstats.un.org/unsd/cr/downloads/SITC4_english.zip
+      dataFile: SITC4_english_structure.txt
+      version: '4'
+      colnames: 'Code,Description'
+    - url: http://unstats.un.org/unsd/cr/downloads/SITC_Rev_3_english.zip
+      dataFile: SITC_Rev_3_english_structure.txt
+      version: '3'
+      colnames: 'Code,Description'
